[package]
name = "runtime-common"
authors = [ "PureStake" ]
description = "Common code shared between runtimes"
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
version = "0.8.0-dev"

[dependencies]
log = "0.4"

# Moonbeam
pallet-asset-manager = { git = "https://github.com/purestake/moonbeam", rev = "runtime-1000", optional = true, default-features = false }
pallet-author-mapping = { git = "https://github.com/purestake/moonbeam", rev = "runtime-1000", default-features = false }
pallet-migrations = { git = "https://github.com/purestake/moonbeam", rev = "runtime-1000", default-features = false }
parachain-staking = { git = "https://github.com/purestake/moonbeam", rev = "runtime-1000", default-features = false }

# Substrate
frame-support = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
frame-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
pallet-collective = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }

# Frontier
pallet-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12", default-features = false }

[features]
std = [
	"frame-support/std",
	"pallet-asset-manager/std",
	"pallet-author-mapping/std",
	"pallet-evm/std",
	"sp-core/std",
	"pallet-migrations/std",
	"parachain-staking/std",
	"sp-runtime/std",
	"sp-std/std",
]
