[package]
name = "moonbeam-evm-tracer"
authors = [ "PureStake" ]
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
# In those shared code the branch is irrelevant as long as revers to a rust2018 workspace.
# Each version of the runtime will patch the Subtrate and Frontier dependencies to the correct
# git repo and branch. Since cargo don't want to patch with the same repo url, we use a dummy fork
# not used in the runtimes.
log = { workspace = true }

# Moonbeam
evm-tracing-events = { workspace = true, features = [ "evm-tracing" ] }
moonbeam-primitives-ext = { workspace = true }

# Substrate
parity-scale-codec = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier
ethereum-types = { workspace = true }
evm = { workspace = true, features = [ "with-codec" ] }
evm-gasometer = { workspace = true }
evm-runtime = { workspace = true }
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"ethereum-types/std",
	"evm-gasometer/std",
	"evm-runtime/std",
	"evm-tracing-events/std",
	"evm/std",
	"evm/with-serde",
	"fp-evm/std",
	"moonbeam-primitives-ext/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
